// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HeaderSlideTitle Advanced 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 48,
        "paddingVertical": 16,
      },
      Object {
        "height": 60,
      },
    ]
  }
  testID="header-slide-title"
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEFF1",
        "borderRadius": 1000,
        "height": 28,
        "overflow": "hidden",
        "width": 28,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Object {
            "backgroundColor": "#ECEFF1",
            "borderRadius": 1000,
            "height": 28,
            "overflow": "hidden",
            "width": 28,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2FCoorpAcademy%2Fcontent-eyrolles%2Fcockpit-eyrolles%2Fdefault%2Fshutterstock_123603871-1-1545058448041.jpg&m=crop&q=90&w=56&h=56",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="header-slide-title-image"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontSize": 12,
              "fontWeight": "700",
            },
            Object {
              "color": "#00B0FF",
            },
          ],
        ]
      }
    >
      Advanced
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Object {
            "color": "#546E7A",
            "fontSize": 12,
            "fontWeight": "700",
          },
        ]
      }
      testID="header-slide-title-title"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
    </Text>
  </View>
</View>
`;

exports[`Storyshots HeaderSlideTitle Basic 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 48,
        "paddingVertical": 16,
      },
      Object {
        "height": 60,
      },
    ]
  }
  testID="header-slide-title"
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEFF1",
        "borderRadius": 1000,
        "height": 28,
        "overflow": "hidden",
        "width": 28,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Object {
            "backgroundColor": "#ECEFF1",
            "borderRadius": 1000,
            "height": 28,
            "overflow": "hidden",
            "width": 28,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2FCoorpAcademy%2Fcontent-eyrolles%2Fcockpit-eyrolles%2Fdefault%2Fshutterstock_123603871-1-1545058448041.jpg&m=crop&q=90&w=56&h=56",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="header-slide-title-image"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontSize": 12,
              "fontWeight": "700",
            },
            Object {
              "color": "#00B0FF",
            },
          ],
        ]
      }
    >
      Basic
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Object {
            "color": "#546E7A",
            "fontSize": 12,
            "fontWeight": "700",
          },
        ]
      }
      testID="header-slide-title-title"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
    </Text>
  </View>
</View>
`;

exports[`Storyshots HeaderSlideTitle Coach 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 48,
        "paddingVertical": 16,
      },
      Object {
        "height": 60,
      },
    ]
  }
  testID="header-slide-title"
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEFF1",
        "borderRadius": 1000,
        "height": 28,
        "overflow": "hidden",
        "width": 28,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Object {
            "backgroundColor": "#ECEFF1",
            "borderRadius": 1000,
            "height": 28,
            "overflow": "hidden",
            "width": 28,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2FCoorpAcademy%2Fcontent-eyrolles%2Fcockpit-eyrolles%2Fdefault%2Fshutterstock_123603871-1-1545058448041.jpg&m=crop&q=90&w=56&h=56",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="header-slide-title-image"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontSize": 12,
              "fontWeight": "700",
            },
            Object {
              "color": "#00B0FF",
            },
          ],
        ]
      }
    >
      Coach
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Object {
            "color": "#546E7A",
            "fontSize": 12,
            "fontWeight": "700",
          },
        ]
      }
      testID="header-slide-title-title"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
    </Text>
  </View>
</View>
`;

exports[`Storyshots HeaderSlideTitle Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 48,
        "paddingVertical": 16,
      },
      Object {
        "height": 60,
      },
    ]
  }
  testID="header-slide-title"
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEFF1",
        "borderRadius": 1000,
        "height": 28,
        "overflow": "hidden",
        "width": 28,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Object {
            "backgroundColor": "#ECEFF1",
            "borderRadius": 1000,
            "height": 28,
            "overflow": "hidden",
            "width": 28,
          },
        ]
      }
    >
      <Image
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="header-slide-title-image"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "justifyContent": "center",
          },
          Object {
            "height": undefined,
          },
          undefined,
        ]
      }
    >
      <View
        noMargin={true}
        style={
          Array [
            Object {
              "borderRadius": 0,
            },
            Object {
              "height": 5,
            },
            Object {
              "backgroundColor": "#ECEFF1",
            },
          ]
        }
        width="15%"
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "justifyContent": "center",
          },
          Object {
            "height": undefined,
          },
          undefined,
        ]
      }
    >
      <View
        noMargin={true}
        style={
          Array [
            Object {
              "borderRadius": 0,
            },
            Object {
              "height": 5,
            },
            Object {
              "backgroundColor": "#ECEFF1",
            },
          ]
        }
        width="50%"
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
